[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/fonts/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/gui/settings_menu.gd" type="Script" id=2]
[ext_resource path="res://Levels/Menu/Button.theme" type="Theme" id=3]
[ext_resource path="res://Shaders/Light1.png" type="Texture" id=4]
[ext_resource path="res://Misc/Keys/A.png" type="Texture" id=5]
[ext_resource path="res://Misc/Keys/D.png" type="Texture" id=6]
[ext_resource path="res://Misc/Keys/Shift.png" type="Texture" id=7]
[ext_resource path="res://Misc/Keys/E.png" type="Texture" id=8]
[ext_resource path="res://Misc/Keys/LMouse.png" type="Texture" id=9]
[ext_resource path="res://Misc/Keys/Space.png" type="Texture" id=10]
[ext_resource path="res://Misc/Keys/Alt.png" type="Texture" id=11]
[ext_resource path="res://Misc/Keys/F.png" type="Texture" id=12]
[ext_resource path="res://Misc/Keys/RMouse.png" type="Texture" id=13]
[ext_resource path="res://Misc/Keys/S.png" type="Texture" id=14]
[ext_resource path="res://Misc/Keys/Plus.png" type="Texture" id=15]
[ext_resource path="res://Sounds/UI/Hover.mp3" type="AudioStream" id=16]
[ext_resource path="res://Sounds/UI/Click.mp3" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0.415686, 0.415686, 0.415686, 1 )
border_width_right = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color( 0.886275, 0.298039, 0.0117647, 1 )
border_blend = true

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_hover = Color( 1, 0.8, 0.109804, 1 )
Button/colors/font_color_pressed = Color( 0.886275, 0.298039, 0.0117647, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 7 )
Label/styles/normal = null
TabContainer/colors/font_color_bg = Color( 1, 1, 1, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 1, 1, 1, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 0
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = SubResource( 10 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = SubResource( 8 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 9 )
Tabs/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
Tabs/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Tabs/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
Tabs/constants/hseparation = 4
Tabs/constants/label_valign_bg = 2
Tabs/constants/label_valign_fg = 0
Tabs/constants/top_margin = 24
Tabs/fonts/font = SubResource( 10 )
Tabs/icons/close = null
Tabs/icons/decrement = null
Tabs/icons/decrement_highlight = null
Tabs/icons/increment = null
Tabs/icons/increment_highlight = null
Tabs/styles/button = null
Tabs/styles/button_pressed = null
Tabs/styles/panel = null
Tabs/styles/tab_bg = null
Tabs/styles/tab_disabled = null
Tabs/styles/tab_fg = null

[sub_resource type="DynamicFontData" id=549]
font_path = "res://Fonts/JenrivTitlingRegular-x3RKV.otf"

[sub_resource type="DynamicFont" id=550]
size = 43
outline_size = 1
outline_color = Color( 0.713726, 0.454902, 0.0235294, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 549 )

[sub_resource type="Theme" id=551]
default_font = SubResource( 550 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.203922, 0.203922, 0.203922, 0.2 )
Button/colors/font_color_focus = Color( 1, 0.756863, 0.560784, 1 )
Button/colors/font_color_hover = Color( 1, 0.756863, 0.560784, 1 )
Button/colors/font_color_pressed = Color( 1, 0.447059, 0, 1 )

[sub_resource type="Animation" id=556]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.713726, 0.262745, 0.196078 ), Color( 1, 0.713726, 0.262745, 0.784314 ) ]
}

[sub_resource type="Animation" id=557]
resource_name = "Inactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=558]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.713726, 0.262745, 0.196078 ), Color( 1, 0.713726, 0.262745, 0.784314 ) ]
}

[sub_resource type="Animation" id=559]
resource_name = "Inactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=560]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.713726, 0.262745, 0.196078 ), Color( 1, 0.713726, 0.262745, 0.784314 ) ]
}

[sub_resource type="Animation" id=561]
resource_name = "Inactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFontData" id=563]
font_path = "res://Fonts/alagard.ttf"

[sub_resource type="DynamicFont" id=564]
size = 50
outline_size = 1
outline_color = Color( 0.196078, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 563 )

[sub_resource type="Theme" id=565]
default_font = SubResource( 564 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.235294, 0.227451, 0.227451, 0.988235 )
Button/colors/font_color_focus = Color( 0.592157, 0.211765, 0.211765, 1 )
Button/colors/font_color_hover = Color( 0.592157, 0.211765, 0.211765, 1 )
Button/colors/font_color_pressed = Color( 0.619608, 0, 0, 1 )
Button/constants/hseparation = 2
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
CheckButton/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
CheckButton/colors/font_color_disabled = Color( 0.235294, 0.227451, 0.227451, 0.988235 )
CheckButton/colors/font_color_focus = Color( 0.592157, 0.211765, 0.211765, 1 )
CheckButton/colors/font_color_hover = Color( 0.592157, 0.211765, 0.211765, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0.619608, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0.619608, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
OptionButton/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
OptionButton/colors/font_color_disabled = Color( 0.235294, 0.227451, 0.227451, 0.988235 )
OptionButton/colors/font_color_focus = Color( 0.592157, 0.211765, 0.211765, 1 )
OptionButton/colors/font_color_hover = Color( 0.592157, 0.211765, 0.211765, 1 )
OptionButton/colors/font_color_pressed = Color( 0.619608, 0, 0, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/icons/arrow = null
OptionButton/styles/disabled = null
OptionButton/styles/focus = null
OptionButton/styles/hover = null
OptionButton/styles/normal = null
OptionButton/styles/pressed = null

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 131.0
mouse_filter = 1
input_pass_on_modal_close_click = false
theme = SubResource( 11 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 52.251, 505.793, 221.993 ]
}

[node name="VideoSettings" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -907.494
margin_top = -319.5
margin_right = -568.494
margin_bottom = -275.5
focus_mode = 0
theme = SubResource( 551 )
enabled_focus_mode = 0
text = "Video Settings"
flat = true
clip_text = true
align = 0
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="VideoSettings"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 169.487, 22.4336 )
scale = Vector2( 5.02101, 0.547514 )
texture = ExtResource( 4 )

[node name="VideoAnim" type="AnimationPlayer" parent="VideoSettings"]
reset_on_save = false
anims/Hover = SubResource( 556 )
anims/Inactive = SubResource( 557 )

[node name="AudioSettings" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -907.494
margin_top = -273.5
margin_right = -568.494
margin_bottom = -229.5
focus_mode = 0
theme = SubResource( 551 )
enabled_focus_mode = 0
text = "Audio Settings"
flat = true
clip_text = true
align = 0
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="AudioSettings"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 169.487, 22.4336 )
scale = Vector2( 5.02101, 0.547514 )
texture = ExtResource( 4 )

[node name="AudioAnim" type="AnimationPlayer" parent="AudioSettings"]
reset_on_save = false
anims/Hover = SubResource( 558 )
anims/Inactive = SubResource( 559 )

[node name="ControlsSettings" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -907.494
margin_top = -224.875
margin_right = -568.494
margin_bottom = -180.875
focus_mode = 0
theme = SubResource( 551 )
enabled_focus_mode = 0
text = "Controls"
flat = true
clip_text = true
align = 0
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="ControlsSettings"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 169.487, 22.4336 )
scale = Vector2( 5.02101, 0.547514 )
texture = ExtResource( 4 )

[node name="ControlsAnim" type="AnimationPlayer" parent="ControlsSettings"]
reset_on_save = false
anims/Hover = SubResource( 560 )
anims/Inactive = SubResource( 561 )

[node name="Video" type="Node2D" parent="."]
visible = false
position = Vector2( 493.007, 85.4108 )

[node name="ScreenMode" type="Label" parent="Video"]
margin_left = 12.5
margin_top = 71.0
margin_right = 772.5
margin_bottom = 191.0
rect_scale = Vector2( 0.3, 0.3 )
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "Display Mode"

[node name="DisplayOptions" type="OptionButton" parent="Video"]
margin_left = 281.0
margin_top = 71.0
margin_right = 1108.0
margin_bottom = 162.0
rect_scale = Vector2( 0.3, 0.3 )
focus_mode = 0
size_flags_horizontal = 10
theme = ExtResource( 3 )
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="Vsync" type="Label" parent="Video"]
margin_left = 12.5052
margin_top = 135.0
margin_right = 439.505
margin_bottom = 255.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 3 )
text = "Vsync"

[node name="VsyncBtn" type="CheckButton" parent="Video"]
margin_left = 278.817
margin_top = 151.4
margin_right = 342.817
margin_bottom = 183.4

[node name="DisplayFps" type="Label" parent="Video"]
margin_left = 12.5052
margin_top = 202.149
margin_right = 692.505
margin_bottom = 322.149
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 3 )
text = "Display FPS"

[node name="DisplayFpsBtn" type="CheckBox" parent="Video"]
margin_left = 290.963
margin_top = 195.326
margin_right = 306.963
margin_bottom = 220.326
rect_scale = Vector2( 2, 2 )

[node name="MaxFpsSlider" type="HSlider" parent="Video"]
margin_left = 281.0
margin_top = 255.0
margin_right = 481.0
margin_bottom = 271.0
rect_min_size = Vector2( 200, 0 )
rect_scale = Vector2( 3, 3 )
focus_mode = 0
size_flags_horizontal = 11
size_flags_vertical = 1
theme = ExtResource( 3 )
min_value = 30.0
max_value = 500.0
value = 500.0
rounded = true

[node name="MaxFps" type="Label" parent="Video"]
margin_left = 12.5052
margin_top = 263.0
margin_right = 532.505
margin_bottom = 383.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 3 )
text = "Max FPS"

[node name="MaxFpsVal" type="Label" parent="Video"]
margin_left = 894.571
margin_top = 259.225
margin_right = 1353.57
margin_bottom = 379.225
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 3 )
text = "max"

[node name="Audio" type="Node2D" parent="."]
visible = false
position = Vector2( 282.986, 88.3923 )

[node name="MasterVol" type="Label" parent="Audio"]
margin_left = 222.807
margin_top = 68.0
margin_right = 1094.81
margin_bottom = 188.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 3 )
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Audio"]
margin_left = 493.6
margin_top = 57.0
margin_right = 693.6
margin_bottom = 73.0
rect_min_size = Vector2( 200, 0 )
rect_scale = Vector2( 3, 3 )
focus_mode = 0
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="MusicVol" type="Label" parent="Audio"]
margin_left = 222.807
margin_top = 132.0
margin_right = 1038.81
margin_bottom = 252.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 3 )
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Audio"]
margin_left = 493.6
margin_top = 121.0
margin_right = 693.6
margin_bottom = 137.0
rect_min_size = Vector2( 200, 0 )
rect_scale = Vector2( 3, 3 )
focus_mode = 0
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="SfxVol" type="Label" parent="Audio"]
margin_left = 222.807
margin_top = 196.0
margin_right = 926.807
margin_bottom = 316.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 3 )
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="Audio"]
margin_left = 493.6
margin_top = 185.0
margin_right = 693.6
margin_bottom = 201.0
rect_min_size = Vector2( 200, 0 )
rect_scale = Vector2( 3, 3 )
focus_mode = 0
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="Controls" type="Node2D" parent="."]
visible = false
position = Vector2( 282.986, 88.3923 )

[node name="ScrollContainer" type="ScrollContainer" parent="Controls"]
margin_left = 223.0
margin_top = 68.0
margin_right = 1254.0
margin_bottom = 669.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Panel" type="VBoxContainer" parent="Controls/ScrollContainer"]
margin_right = 1043.0
margin_bottom = 916.0
rect_min_size = Vector2( 1043, 601 )
custom_constants/separation = 7

[node name="LandScheme" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_right = 1043.0
margin_bottom = 99.0
theme = SubResource( 565 )
text = "While landed
"
align = 1

[node name="Control" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 106.0
margin_right = 1043.0
margin_bottom = 154.0
theme = SubResource( 565 )
text = "Move Left"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control"]
margin_left = 871.0
margin_right = 920.0
margin_bottom = 49.0
theme = ExtResource( 3 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Control2" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 161.0
margin_right = 1043.0
margin_bottom = 209.0
theme = SubResource( 565 )
text = "Move Right"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control2"]
margin_left = 871.0
margin_right = 920.0
margin_bottom = 49.0
theme = ExtResource( 3 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Control3" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 216.0
margin_right = 1043.0
margin_bottom = 264.0
theme = SubResource( 565 )
text = "Dodge"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control3"]
margin_left = 871.0
margin_right = 968.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Control4" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 271.0
margin_right = 1043.0
margin_bottom = 319.0
theme = SubResource( 565 )
text = "Dash"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control4"]
margin_left = 871.0
margin_right = 968.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Control5" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 326.0
margin_right = 1043.0
margin_bottom = 374.0
theme = SubResource( 565 )
text = "Change Weapon"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control5"]
margin_left = 871.0
margin_right = 920.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="Control6" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 381.0
margin_right = 1043.0
margin_bottom = 429.0
theme = SubResource( 565 )
text = "Interact"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control6"]
margin_left = 871.0
margin_right = 920.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Control7" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 436.0
margin_right = 1043.0
margin_bottom = 484.0
theme = SubResource( 565 )
text = "Jump"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control7"]
margin_left = 871.0
margin_right = 968.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="Control8" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 491.0
margin_right = 1043.0
margin_bottom = 539.0
theme = SubResource( 565 )
text = "Light Attack"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control8"]
margin_left = 871.0
margin_right = 920.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Control9" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 546.0
margin_right = 1043.0
margin_bottom = 594.0
theme = SubResource( 565 )
text = "Heavy Attack"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control9"]
margin_left = 871.0
margin_right = 920.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Air Scheme" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 601.0
margin_right = 1043.0
margin_bottom = 751.0
theme = SubResource( 565 )
text = "
While in air
"
align = 1

[node name="Control10" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 758.0
margin_right = 1043.0
margin_bottom = 806.0
theme = SubResource( 565 )
text = "Air Dash "

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control10"]
margin_left = 871.0
margin_right = 968.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Control11" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 813.0
margin_right = 1043.0
margin_bottom = 861.0
theme = SubResource( 565 )
text = "Air Attack"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control11"]
margin_left = 871.0
margin_right = 968.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Control12" type="Label" parent="Controls/ScrollContainer/Panel"]
margin_top = 868.0
margin_right = 1043.0
margin_bottom = 916.0
theme = SubResource( 565 )
text = "Air Slam"

[node name="Key" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control12"]
margin_left = 871.0
margin_right = 920.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Key2" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control12"]
margin_left = 920.0
margin_right = 968.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Key3" type="TextureRect" parent="Controls/ScrollContainer/Panel/Control12"]
margin_left = 968.0
margin_right = 1016.0
margin_bottom = 48.0
theme = ExtResource( 3 )
texture = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -20.0

[connection signal="mouse_entered" from="VideoSettings" to="." method="_on_VideoSettings_mouse_entered"]
[connection signal="mouse_exited" from="VideoSettings" to="." method="_on_VideoSettings_mouse_exited"]
[connection signal="pressed" from="VideoSettings" to="." method="_on_VideoSettings_pressed"]
[connection signal="mouse_entered" from="AudioSettings" to="." method="_on_AudioSettings_mouse_entered"]
[connection signal="mouse_exited" from="AudioSettings" to="." method="_on_AudioSettings_mouse_exited"]
[connection signal="pressed" from="AudioSettings" to="." method="_on_AudioSettings_pressed"]
[connection signal="mouse_entered" from="ControlsSettings" to="." method="_on_ControlsSettings_mouse_entered"]
[connection signal="mouse_exited" from="ControlsSettings" to="." method="_on_ControlsSettings_mouse_exited"]
[connection signal="pressed" from="ControlsSettings" to="." method="_on_ControlsSettings_pressed"]
[connection signal="item_selected" from="Video/DisplayOptions" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="Video/VsyncBtn" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Video/DisplayFpsBtn" to="." method="_on_DisplayFpsBtn_toggled"]
[connection signal="value_changed" from="Video/MaxFpsSlider" to="." method="_on_MaxFpsSlider_value_changed"]
[connection signal="value_changed" from="Audio/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Audio/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Audio/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
